--- a/maincss/mainlayout.css
+++ b/maincss/mainlayout.css
@@ -86,7 +86,7 @@
 #content section:nth-of-type(1){width: 1200px; margin: 0 auto; }
 #content section:nth-of-type(2){width: 100%; margin: 0 auto; background: #F5F5F5 0 0 repeat;}
 #content section:nth-of-type(3){width: 2000px; margin: 0 auto;}
-#content section:nth-of-type(4){width: 1200px; margin: 0 auto;}
+#content section:nth-of-type(4){width: 2000px; margin: 0 auto;}
 #content section:nth-of-type(5){width: 2000px; margin: 0 auto}
 
 #content section .business_container{width: 1200px; margin: 0 auto;} 
@@ -292,7 +292,77 @@
 
 .brand ul{position: relative; float: right;}
 
-.brand .brand_con ul li{
+.brand .brand_con ul li a{
+  width: 360px;
+  height: 480px;
+  border: 1px solid rgba(255,255,255,.5); 
+  border-radius: 20px;
+  padding: 55px 40px ;
+  box-sizing: border-box;
+  overflow: hidden;
+  background: #ffffff00;
+  color: #fff;
+  text-shadow: 2px 2px 6px rgba(0,0,0,.3);
+  backdrop-filter: blur(5px);
+  box-shadow: 2px 0px 8px 1px rgba(255, 255, 255, 0.5);
+  transition: all .3s ease;
+}
+.brand .brand_con ul li a:hover{
+  background: #fff;
+  box-sizing: border-box;
+  overflow: hidden;
+  color: #111;
+  text-shadow: 0px 0px 0px rgba(0,0,0,.3);
+  box-shadow: 2px 2px 10px 5px rgba(0,0,0,.4);
+}
+
+
+.brand li:nth-child(1){position:absolute; right:385px; top: 0;}
+.brand li:nth-child(2){position:absolute; right: 0; top: 160px;}
+.brand li:nth-child(3){position:absolute; right: 385px; top: 505px;}
+.brand li:nth-child(4){position:absolute; right: 0; top: 665px;}
+  
+.brand .brand_con li img{opacity: 0; display: flex; align-content: center; 
+}
+.brand_con li:hover img{opacity: 1; transition: all .5s ease-out;}
+
+.brand .brand_con li:nth-child(1) img{
+  width: 200px;
+  margin: 100px auto;
+  display: flex;
+  align-content: center; 
+}
+.brand .brand_con li:nth-child(2) img{
+  width: 159px;
+  margin: 85px auto;
+  display: flex;
+  align-content: center; 
+}
+.brand .brand_con li:nth-child(3) img{
+  width: 260px;
+  margin: 110px auto;
+  display: flex;
+  align-content: center; 
+}
+.brand .brand_con li:nth-child(4) img{
+  width: 170px;
+  margin: 90px auto;
+  display: flex;
+  align-content: center; 
+}
+
+.brand h4{font-size: 1.56rem; float: left;}
+.brand .brand_con p{margin: 25px 0 0; font-size: 1rem;}
+.brand .brand_con span{margin: 6px 15px 0;
+  font-size: 1.85rem; color: #FFCCA8;
+  transition: all .5s ease-out;
+}
+.brand .brand_con li:hover span{margin: 6px 15px 0;
+  font-size: 1.85rem; color: #8e684c;
+  transform: translateX(95px);
+}
+
+/* .brand .brand_con ul li{
   width: 360px;
   height: 480px;
   border: 1px solid rgba(255,255,255,.5); 
@@ -360,7 +430,7 @@
 .brand .brand_con span:hover{margin: 6px 15px 0;
   font-size: 1.85rem; color: #8e684c;
   transform: scale(1.2);
-}
+} */
 
 
 
@@ -382,11 +452,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute; right: -450px; top: 0 ;
+  position: absolute; right: 338px; top: 500px ;
   transition: all .3s ease-out;
 }
 .social .social_con{position: relative;  overflow: hidden;}
-.social .social_con img{transition: all .5s ease-out;}
+.social .social_con img{transition: all .3s ease-out; overflow: hidden;}
 .social .social_con:hover img{transform: scale(1.1); filter: brightness(90%);}
 
 .social .social_con:hover .social_box {
@@ -398,7 +468,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute; right: 0; top: 0 ;
+  position: absolute; right: 338px; top: 0 ;
 }
 .social h4{font-size: 1.88rem; }
 .social .social_box p{margin: 20px 0 0; font-size: 1.13rem;}
