--- a/sub6/css/sub6_content1.css
+++ b/sub6/css/sub6_content1.css
@@ -5,7 +5,7 @@
 
 
 /* content_area 영역 */
-.content_area{width: 1200px; margin: 0 auto;  }
+.content_area{width: 100%; margin: 0 auto; }
 .content_area h3{font-family:"Noto Serif KR" ; font-size: 2.5rem; color:#8E684C; text-align:center; font-weight: 600;}
 .content_area .p1{font-size: 1.56rem; color:#555; text-align:center; width: 1150px; margin: 0 auto; margin-top: 50px; margin-bottom: 150px; line-height: 2.8rem; }
 
@@ -18,8 +18,7 @@
 }
 
 /* 맛있는제주 콘텐츠 시작 */
-.content_area .con1 img:first-of-type{border-radius: 20px;}
-.content_area .con1 img:nth-of-type(2){display: block; margin: 120px auto;}
+.content_area .con1{width: 1200px; margin: 0 auto;}
 .content_area .con1 h4{
     font-size: 2.5rem;
     font-weight: 700;
@@ -71,7 +70,7 @@
     content: ''; display: block;
     width: 50px; height: 80px;
     background: #8E684C;
-    position: absolute; right: 60px; top: -85px;
+    position: absolute; right: 60px; top: -60px;
     transition: all .3s ease-out;
 }
 .content_area .con1 ul li:hover::before{
@@ -91,7 +90,7 @@
     font-size: 1.56rem;
     font-weight: 600;
     line-height: 2.7rem;
-    color: #D9D9D9;
+    color: #999;
     margin-bottom: 70px;
 }
 .content_area .con1 ul li:hover dl dt{
@@ -108,6 +107,7 @@
 
 
 /* con2 */
+.content_area .con2 {width: 1200px; margin: 0 auto;  }
 .content_area .con2 img{
     margin: 150px 0 80px;
     border-radius: 100px 0 100px;
@@ -135,32 +135,117 @@
     font-size: 1.38rem;
     text-align: right;
     line-height: 2.5rem;
+    margin-bottom: 100px;
 }
 
 /* 식당 리스트 */
-.content_area .restaurant{}
-.content_area .restaurant ul{
-    display: flex; 
-    flex-wrap: wrap; 
-    justify-content: space-between;
-    margin: 150px 0 ;
+
+.content_area .jejubg{
+    width: 100%; height: 400px;
+    background: url(../images/content1/bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
-.content_area .restaurant ul li{margin-bottom: 50px;}
-.content_area .restaurant ul li img{border-radius: 100px;}
-.content_area .restaurant ul li dl{
+.content_area .con3{width: 1200px; margin: 150px auto;}
+.content_area .tit_img{border-radius: 20px;}
+
+
+
+
+.content_area .map_con{
+    display: flex; 
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 80px;
+}
+.content_area .map_left{
+    width: 50%; margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+.content_area .map_left .mapimg{
+    width: 90%;
+    display: block; 
+    margin: 0 auto;
+}
+.content_area .map_left .branch{
+    display: flex;
+    margin-top: 50px;
+    align-items: center;
+}
+.content_area .map_left .branch img{
+    border-radius: 200px;
+    width: 50%;
+}
+.content_area .map_left .branch ul{
+    width: 50%;
+    margin-left: 40px;
+}
+.content_area .map_left .branch ul li:nth-of-type(1) span{
+    display: block;
+    width: 100%;
+    color: #8E684C;
+    border-bottom: 1px solid #8E684C;
+    padding: 5px 0;
+    font-weight: bold;
+}
+.content_area .map_left .branch ul li:nth-of-type(1) strong{
+    display: block;
+    font-size: 1.13rem;
+    margin: 10px 0;
+    
+}
+.content_area .map_left .branch ul li:nth-of-type(1){
+    
+}
+.content_area .map_left .branch ul li:nth-of-type(2){
+    margin: 5px 0;
+}
+.content_area .map_left .branch ul li:nth-of-type(3){
+}
+
+
+
+
+
+
+
+
+
+.content_area .restaurant{
+    display: flex; 
+    width: 40%; 
+    margin-top: 30px;
+}
+.content_area .restaurant ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.content_area .restaurant div{
+    width: 250px; 
+    cursor: pointer;
+}
+.content_area .restaurant div ul li{
+    width: 100%;
+    /* margin-bottom: 15px; */
+}
+.content_area .restaurant div ul li dl{
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 20px;
 } 
-.content_area .restaurant ul li dl dt{
+.content_area .restaurant div ul li dl dt{
+    width: 70px;
     color: #8E684C;
-    border: 1px solid #8E684C;
+    background: #f5e6da81;;
     border-radius: 20px;
-    padding: 3px 12px;
+    padding: 2px 0;
+    font-size: .9rem;
+    text-align: center;
 }
-.content_area .restaurant ul li dl dd{
-    font-size: 1.25rem;
+.content_area .restaurant div ul li dl dd{
+    font-size: 1.13rem;
     margin-left: 20px;
 }
 
