--- a/sub6/css/sub6_content1.css
+++ b/sub6/css/sub6_content1.css
@@ -163,12 +163,41 @@
     width: 50%; margin: 0 auto;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
-.content_area .map_left .mapimg{
+.content_area .map_left .map{
     width: 90%;
     display: block; 
     margin: 0 auto;
+    position: relative;
 }
+.content_area .map_left .mapimg{
+    display: block; 
+    margin: 0 auto;
+}
+.content_area .map_left .jejutit{
+    font-family: 'Monserrat';
+    letter-spacing: .7rem;
+    color: #ccc;
+    position: absolute;
+    left: 30%; top: 38%;
+}
+.material-symbols-rounded {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 300,
+    'GRAD' 0,
+    'opsz' 24
+}
+.content_area .map_left .pin{
+    position: absolute;
+    left: 40%; top: 1%;
+}
+.content_area .map_left .pin span{
+    font-size: 2.5rem;
+    color :#8E684C;
+}
+
 .content_area .map_left .branch{
     display: flex;
     margin-top: 50px;
@@ -179,7 +208,7 @@
     width: 50%;
 }
 .content_area .map_left .branch ul{
-    width: 50%;
+    width: 45%;
     margin-left: 40px;
 }
 .content_area .map_left .branch ul li:nth-of-type(1) span{
@@ -188,21 +217,21 @@
     color: #8E684C;
     border-bottom: 1px solid #8E684C;
     padding: 5px 0;
-    font-weight: bold;
+    font-weight: 600;
 }
 .content_area .map_left .branch ul li:nth-of-type(1) strong{
     display: block;
     font-size: 1.13rem;
     margin: 10px 0;
-    
-}
-.content_area .map_left .branch ul li:nth-of-type(1){
+    font-weight: 700;
     
 }
 .content_area .map_left .branch ul li:nth-of-type(2){
-    margin: 5px 0;
+    font-weight: 600;
 }
 .content_area .map_left .branch ul li:nth-of-type(3){
+    margin: 5px 0;
+    color: #444;
 }
 
 
