--- a/profile/sass/style.css
+++ b/profile/sass/style.css
@@ -57,10 +57,11 @@ em {
   --pf-light: #5ABAB9;
   --web-color: #8E684C;
   --rw-color: #F2AA00;
+  --dp-color: #1F76C7;
 }
 
 /* 로고 */
-h1 {
+h1 a {
   font-size: 2rem;
   font-family: var(--ft-serif);
   font-style: italic;
@@ -129,6 +130,14 @@ h1 {
   color: var(--rw-color);
 }
 
+#menu li:nth-child(6).on a::before {
+  background: var(--dp-color);
+}
+
+#menu li:nth-child(6).on a {
+  color: var(--dp-color);
+}
+
 #menu li:hover a {
   font-size: 1.5rem;
   opacity: 1;
@@ -152,6 +161,10 @@ h1 {
 
 #menu li:nth-child(5):hover a {
   color: var(--rw-color);
+}
+
+#menu li:nth-child(6):hover a {
+  color: var(--dp-color);
 }
 
 /* 섹션 세팅 */
@@ -183,6 +196,10 @@ section:nth-child(4) {
 
 section:nth-child(5) {
   background-image: url(../image/bg/bg4.jpg);
+}
+
+section:nth-child(6) {
+  background-image: url(../image/bg/bg5.jpg);
 }
 
 /* 홈 섹션 */
@@ -283,7 +300,7 @@ section:nth-child(5) {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid var(--pf-color);
+  border: 2px solid var(--pf-color);
   border-radius: 50px;
   background: rgba(234, 232, 219, 0.5215686275);
   -webkit-backdrop-filter: blur(10px);
@@ -294,6 +311,7 @@ section:nth-child(5) {
 }
 
 .pf_left {
+  margin: auto;
   margin-right: 80px;
 }
 .pf_left img {
@@ -311,7 +329,7 @@ section:nth-child(5) {
 .pf_left ul.link_btn li a:hover {
   background: var(--pf-color);
   color: #fff;
-  border: 1px solid var(--pf-color);
+  border: 2px solid var(--pf-color);
   letter-spacing: 6px;
 }
 .pf_left ul.link_btn li a:nth-of-type(1):hover {
@@ -319,32 +337,39 @@ section:nth-child(5) {
 }
 
 .btn, .pf_left ul.link_btn li a {
-  width: 200px;
+  width: 300px;
   font-size: 1.4rem;
-  font-family: var(--ft-serif);
+  font-family: var(--ft-sanserif);
+  font-weight: 600;
   font-style: italic;
   text-align: center;
   color: var(--pf-color);
-  border: 1px solid var(--pf-color);
+  border: 2px solid var(--pf-color);
   border-radius: 30px;
-  padding: 10px 40px;
+  padding: 10px 0;
   transition: 0.4s ease-out;
 }
 
-.tit_strong, .rw_right .tit strong, .mb_right .tit strong, .web_right .tit strong {
+.tit_strong, .dp_right .tit strong, .rw_right .tit strong, .mb_right .tit strong, .web_right .tit strong {
   font-family: var(--ft-serif);
   font-size: 3.5rem;
   font-weight: 600;
 }
 
-.tit_p, .rw_right .tit p, .mb_right .tit p, .web_right .tit p {
+.tit_li, .dp_right .tit p, .rw_right .tit ul, .mb_right .tit ul, .web_right .tit ul {
   font-size: 1.1rem;
-  line-height: 1.7rem;
-  text-align: justify;
-  margin-top: 20px;
+  font-weight: 500;
+  line-height: 1.8rem;
+  margin-top: 30px;
 }
 
-.tit_a, .rw_right .tit a, .mb_right .tit a, .web_right .tit a {
+.tit_li_bf, .rw_right .tit ul li::before, .mb_right .tit ul li::before, .web_right .tit ul li::before {
+  content: "🗸";
+  display: inline-block;
+  margin: 0 8px 0 5px;
+}
+
+.tit_a, .dp_right .tit a, .rw_right .tit a, .mb_right .tit a, .web_right .tit a, #web .web_right .bfore {
   font-size: 1.5rem;
   font-family: var(--ft-serif);
   font-style: italic;
@@ -357,12 +382,12 @@ section:nth-child(5) {
   transition: all 0.3s ease-out;
 }
 
-.common_dt, .rw_right .skill dl dt, .rw_right .produce dl dt, .rw_right .colorfont dl.font dt, .rw_right .colorfont dl.color dt, .mb_right .skill dl dt, .mb_right .produce dl dt, .mb_right .colorfont dl.font dt, .mb_right .colorfont dl.color dt, .web_right .skill dl dt, .web_right .produce dl dt, .web_right .colorfont dl.font dt, .web_right .colorfont dl.color dt {
-  font-size: 1.3rem;
-  font-weight: 600;
+.common_dt, .dp_right .skill dl dt, .dp_right .produce dl dt, .dp_right .colorfont dl.font dt, .dp_right .colorfont dl.color dt, .rw_right .skill dl dt, .rw_right .produce dl dt, .rw_right .colorfont dl.font dt, .rw_right .colorfont dl.color dt, .mb_right .skill dl dt, .mb_right .produce dl dt, .mb_right .colorfont dl.font dt, .mb_right .colorfont dl.color dt, .web_right .skill dl dt, .web_right .produce dl dt, .web_right .colorfont dl.font dt, .web_right .colorfont dl.color dt {
+  font-size: 1.15rem;
+  font-weight: 500;
 }
 
-.color_dd, .rw_right .colorfont dl.color dd, .mb_right .colorfont dl.color dd, .web_right .colorfont dl.color dd {
+.color_dd, .dp_right .colorfont dl.color dd, .rw_right .colorfont dl.color dd, .mb_right .colorfont dl.color dd, .web_right .colorfont dl.color dd {
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -370,13 +395,13 @@ section:nth-child(5) {
   margin-right: 10px;
 }
 
-.common_dd, .rw_right .skill dl dd, .rw_right .produce dl dd, .rw_right .colorfont dl.font dd, .mb_right .skill dl dd, .mb_right .produce dl dd, .mb_right .colorfont dl.font dd, .web_right .skill dl dd, .web_right .produce dl dd, .web_right .colorfont dl.font dd {
-  font-size: 1.2rem;
+.common_dd, .dp_right .skill dl dd, .dp_right .produce dl dd, .dp_right .colorfont dl.font dd, .rw_right .skill dl dd, .rw_right .produce dl dd, .rw_right .colorfont dl.font dd, .mb_right .skill dl dd, .mb_right .produce dl dd, .mb_right .colorfont dl.font dd, .web_right .skill dl dd, .web_right .produce dl dd, .web_right .colorfont dl.font dd {
+  font-size: 1.1rem;
   color: #666;
 }
 
 .pf_right {
-  margin-top: 20px;
+  margin: auto;
 }
 .pf_right p {
   font-family: var(--ft-serif);
@@ -424,24 +449,31 @@ section:nth-child(5) {
 }
 
 /* 기업형 웹 */
+#web {
+  position: relative;
+}
+
 .web_warp {
-  width: 70%;
+  width: 71%;
   margin: 0 auto;
-  padding-top: 10%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .web_left {
   float: left;
-  width: 40%;
-  padding: 3% 3%;
-  position: relative;
+  width: 50%;
+  position: absolute;
+  left: 5%;
+  top: 10%;
 }
 .web_left span {
-  display: block;
-  font-size: 1.5rem;
+  display: inline-block;
+  font-size: 1.2rem;
   font-weight: 500;
   color: #999999;
-  text-align: right;
   margin-bottom: 20px;
 }
 .web_left span::before {
@@ -454,19 +486,38 @@ section:nth-child(5) {
   font-weight: 700;
   color: rgba(255, 204, 168, 0.3294117647);
   position: absolute;
-  bottom: 5%;
-  right: 65%;
+  bottom: 18%;
+  left: 50%;
 }
-.web_left img.pc {
-  width: 100%;
+.web_left div.pc {
+  width: 75%;
   position: relative;
   z-index: 30;
 }
+.web_left div.pc img {
+  width: 100%;
+}
 .web_left img.gif {
-  width: 82%;
+  width: 71%;
   position: absolute;
-  top: 19.7%;
-  left: 9%;
+  top: 14.2%;
+  left: 2%;
+}
+
+#web .web_right .bfore {
+  background: rgba(212, 212, 212, 0.7137254902);
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  right: 210px;
+  width: 50px;
+  padding: 13px 0 7px;
+  rotate: -40deg;
+}
+
+#web .web_right .bfore:hover {
+  background: #747474;
+  border: none;
 }
 
 .web_right {
@@ -479,8 +530,11 @@ section:nth-child(5) {
 .web_right .tit strong {
   color: var(--web-color);
 }
-.web_right .tit p {
+.web_right .tit ul {
   color: #555;
+}
+.web_right .tit ul li:hover {
+  background: rgba(255, 204, 168, 0.5058823529);
 }
 .web_right .tit a {
   color: var(--web-color);
@@ -533,27 +587,32 @@ section:nth-child(5) {
   margin-bottom: 10px;
 }
 /* 기업형 모바일 */
+#mb {
+  position: relative;
+}
+
 .mb_warp {
   width: 70%;
   margin: 0 auto;
-  padding-top: 10%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .mb_left {
   float: left;
   width: 40%;
-  padding-left: 5%;
-  position: relative;
+  position: absolute;
+  left: 8%;
+  top: 0%;
 }
 .mb_left span {
-  display: block;
-  font-size: 1.5rem;
+  display: inline-block;
+  font-size: 1.2rem;
   font-weight: 500;
   color: #999999;
-  text-align: right;
   margin-bottom: 20px;
-  position: relative;
-  right: 8%;
 }
 .mb_left span::before {
   content: "02";
@@ -561,23 +620,28 @@ section:nth-child(5) {
   width: 100%;
   height: 100%;
   font-family: var(--ft-sanserif);
-  font-size: 9rem;
+  font-size: 8rem;
   font-weight: 700;
   color: rgba(255, 204, 168, 0.3294117647);
   position: absolute;
-  top: -222%;
-  right: 53%;
+  top: 1%;
+  left: 50%;
+  rotate: 8deg;
 }
-.mb_left img.mb {
+.mb_left div.mb_imgbox {
   width: 45%;
+  position: relative;
+}
+.mb_left div.mb_imgbox img.mb {
+  width: 100%;
   position: relative;
   z-index: 30;
 }
-.mb_left img.gif {
-  width: 38.8%;
+.mb_left div.mb_imgbox img.gif {
+  width: 98%;
   position: absolute;
-  top: 10.1%;
-  left: 11.8%;
+  top: 1.1%;
+  left: 1.8%;
   border-radius: 20px;
   z-index: 20;
 }
@@ -585,7 +649,7 @@ section:nth-child(5) {
   width: 35%;
   position: absolute;
   top: 17%;
-  right: 12%;
+  right: 18%;
   rotate: 8deg;
 }
 
@@ -603,11 +667,14 @@ section:nth-child(5) {
   font-family: var(--ft-serif);
   font-size: 2.5rem;
   font-weight: 600;
-  color: #999;
+  color: #555;
   margin-left: 20px;
 }
-.mb_right .tit p {
+.mb_right .tit ul {
   color: #555;
+}
+.mb_right .tit ul li:hover {
+  background: rgba(255, 204, 168, 0.5058823529);
 }
 .mb_right .tit a {
   color: var(--web-color);
@@ -677,25 +744,34 @@ section:nth-child(5) {
 }
 
 /* 반응형 */
+#rw {
+  position: relative;
+}
+
 .rw_warp {
   width: 70%;
   margin: 0 auto;
-  padding-top: 10%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .rw_left {
   float: left;
-  width: 40%;
-  padding: 3% 3%;
-  position: relative;
+  width: 50%;
+  position: absolute;
+  left: 7%;
+  top: 7%;
 }
 .rw_left span {
-  display: block;
-  font-size: 1.5rem;
+  display: inline-block;
+  font-size: 1.2rem;
   font-weight: 500;
   color: #fff;
-  text-align: right;
   margin-bottom: 20px;
+  position: relative;
+  left: 3%;
 }
 .rw_left span::before {
   content: "03";
@@ -703,37 +779,41 @@ section:nth-child(5) {
   width: 100%;
   height: 100%;
   font-family: var(--ft-sanserif);
-  font-size: 9rem;
+  font-size: 8rem;
   font-weight: 700;
   color: rgba(255, 207, 135, 0.1568627451);
   position: absolute;
-  bottom: 5%;
-  right: 65%;
+  top: -260%;
+  left: 230%;
 }
-.rw_left img.rw {
-  width: 90%;
+.rw_left div.rw_imgbox {
+  width: 70%;
   position: relative;
-  z-index: 10;
-  left: 10%;
 }
-.rw_left img.gif {
-  width: 72.5%;
+.rw_left div.rw_imgbox img.rw {
+  width: 100%;
+  position: relative;
+  left: 5%;
+  z-index: 10;
+}
+.rw_left div.rw_imgbox img.gif {
+  width: 93%;
   position: absolute;
-  top: 21%;
-  left: 18.2%;
+  top: 4%;
+  left: 8%;
 }
 .rw_left img.rw1 {
-  width: 35%;
+  width: 30%;
   position: absolute;
-  left: -8%;
-  bottom: -5%;
+  left: -18%;
+  bottom: -22%;
   z-index: 20;
 }
 .rw_left img.rw2 {
-  width: 20%;
+  width: 16%;
   position: absolute;
-  left: 25%;
-  bottom: 0%;
+  left: 7%;
+  bottom: -34%;
   z-index: 30;
 }
 
@@ -747,15 +827,18 @@ section:nth-child(5) {
 .rw_right .tit strong {
   color: var(--rw-color);
 }
-.rw_right .tit p {
+.rw_right .tit ul {
   color: #fff;
+}
+.rw_right .tit ul li:hover {
+  background: rgba(242, 169, 0, 0.2196078431);
 }
 .rw_right .tit a {
   color: var(--rw-color);
   border: 1px solid var(--rw-color);
 }
 .rw_right .tit a:hover {
-  color: #fff;
+  color: #111;
   background: var(--rw-color);
 }
 
@@ -779,6 +862,7 @@ section:nth-child(5) {
 .rw_right .colorfont dl.color dd:nth-of-type(2) {
   background: #111;
   border: 1px solid #666;
+  box-sizing: border-box;
 }
 .rw_right .colorfont dl.color dd:nth-of-type(3) {
   background: #333;
@@ -824,6 +908,156 @@ section:nth-child(5) {
   color: #999;
 }
 .rw_right .skill div {
+  margin: 30px 0;
+  border-radius: 5px;
+  border: 1px solid #999;
+  padding: 3px;
+}
+
+/* 디자인 포폴 영역 */
+#dp {
+  position: relative;
+}
+
+.dp_warp {
+  width: 70%;
+  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.dp_left {
+  float: left;
+  width: 50%;
+  position: absolute;
+  top: 5%;
+}
+.dp_left span {
+  display: inline-block;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 20px;
+  position: relative;
+}
+.dp_left span::before {
+  content: "04";
+  display: block;
+  width: 100%;
+  height: 100%;
+  font-family: var(--ft-sanserif);
+  font-size: 8rem;
+  font-weight: 700;
+  color: rgba(49, 165, 254, 0.1019607843);
+  position: absolute;
+  top: -260%;
+  left: 240%;
+}
+.dp_left div.dp_imgbox {
+  width: 80%;
+  position: relative;
+}
+.dp_left div.dp_imgbox img.dp {
+  width: 100%;
+  position: relative;
+  z-index: 10;
+}
+.dp_left div.dp_imgbox img.gif {
+  width: 98%;
+  position: absolute;
+  top: 2%;
+  left: 1%;
+}
+
+.dp_right {
+  float: right;
+  width: 50%;
+}
+.dp_right .tit {
+  position: relative;
+}
+.dp_right .tit strong {
+  color: var(--dp-color);
+}
+.dp_right .tit p {
+  color: #fff;
+}
+.dp_right .tit a {
+  color: var(--dp-color);
+  border: 1px solid var(--dp-color);
+}
+.dp_right .tit a:hover {
+  color: #fff;
+  background: var(--dp-color);
+}
+
+.dp_right .colorfont {
+  margin-top: 30px;
+  display: flex;
+}
+.dp_right .colorfont dl.color {
+  margin-right: 80px;
+}
+.dp_right .colorfont dl.color dt {
+  color: #fff;
+  margin-bottom: 10px;
+}
+.dp_right .colorfont dl.color dd {
+  color: #999;
+}
+.dp_right .colorfont dl.color dd:nth-of-type(1) {
+  background: var(--dp-color);
+}
+.dp_right .colorfont dl.color dd:nth-of-type(2) {
+  background: #999;
+  box-sizing: border-box;
+}
+.dp_right .colorfont dl.color dd:nth-of-type(3) {
+  background: #fff;
+}
+.dp_right .colorfont dl.font dt {
+  color: #fff;
+  margin-bottom: 10px;
+}
+.dp_right .colorfont dl.font dd {
+  color: #999;
+}
+
+.dp_right .produce {
+  display: flex;
+  margin-top: 30px;
+}
+.dp_right .produce dl {
+  display: flex;
+  align-items: center;
+  margin-right: 80px;
+}
+.dp_right .produce dl dt {
+  color: #fff;
+  margin-right: 20px;
+}
+.dp_right .produce dl dd {
+  color: #999;
+}
+
+.dp_right .skill {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.dp_right .skill dl {
+  width: 80%;
+}
+.dp_right .skill dl dt {
+  color: #fff;
+  margin-bottom: 10px;
+}
+.dp_right .skill dl dd {
+  color: #999;
+}
+.dp_right .skill div {
   margin: 30px 0;
   border-radius: 5px;
   border: 1px solid #999;
