--- a/sub6/css/sub6_content1.css
+++ b/sub6/css/sub6_content1.css
@@ -10,7 +10,7 @@
 .content_area .p1{font-size: 1.56rem; color:#555; text-align:center; width: 1150px; margin: 0 auto; margin-top: 50px; margin-bottom: 150px; line-height: 2.8rem; }
 
 .content_area hr{
-    width: 1200px;
+    width: 1400px;
     background:#d9d9d9; 
     height:1px; 
     border:0;
@@ -45,113 +45,79 @@
     color: #555;
     line-height: 2.5rem;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
-
-.content_area .con1 ul{display: flex;}
+.content_area .con1 img{
+    display: block;
+    width: 900px;
+    margin: 0 auto;
+    border-radius: 100px 0 100px;
+}
+.content_area .con1 ul{
+    display: flex; flex-direction: column; 
+    margin: 70px 0 80px;
+}
 .content_area .con1 ul li{
-    width: 580px; height: 385px;
-    border: 1px solid #d9d9d9;
+    border: 1px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
     box-sizing: border-box;
     border-radius: 30px;
-    margin-bottom: 150px;
-    padding: 60px;
+    margin-bottom: 30px;
+    padding: 40px 70px;
     transition: all .2s ease-out;
     overflow: hidden;
     position: relative;
 }
-.content_area .con1 ul li:nth-of-type(1){margin-right: 40px;}
 .content_area .con1 ul li:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #c4c4c4;
     box-sizing: border-box;
-    border: 1px solid transparent;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
-.content_area .con1 ul li::before{
-    content: ''; display: block;
-    width: 50px; height: 80px;
-    background: #8E684C;
-    position: absolute; right: 60px; top: -60px;
-    transition: all .3s ease-out;
-}
-.content_area .con1 ul li:hover::before{
-    content: ''; display: block;
-    width: 50px; height: 80px;
-    background: #8E684C;
-    position: absolute; right: 60px; top: 0;
-}
+
 .content_area .con1 ul li dl{
-    transform: translateY(140px);
-    transition: all .3s ease-out;
-}
-.content_area .con1 ul li:hover dl{
-    transform: translateY(0);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .content_area .con1 ul li dl dt{
-    font-size: 1.56rem;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 2.7rem;
-    color: #999;
-    margin-bottom: 70px;
+    color: #333;
 }
-.content_area .con1 ul li:hover dl dt{
-    color: #111;
-}
+
 .content_area .con1 ul li dl dd{
     font-size: 1.25rem;
     line-height: 2.4rem;
-    color: #D9D9D9;
-}
-.content_area .con1 ul li:hover dl dd{
-    color: #111;
-}
-
-
-/* con2 */
-.content_area .con2 {width: 1200px; margin: 0 auto;  }
-.content_area .con2 img{
-    margin: 150px 0 80px;
-    border-radius: 100px 0 100px;
-}
-.content_area .con2 h5{
-    font-size: 1.88rem;
-    color: #8E684C;    
+    color: #555;
     position: relative;
-    line-height: 4rem;
 }
-.content_area .con2 h5::after{
+.content_area .con1 ul li dl dd::before{
     content: ''; display: block;
-    width: 600px; height: 3px;
-    background: #8E684C;
-    position: absolute; right: 0; top: 45px;
+    width: 0px; height: 20px;
+    background: #ffcca860;
+    position: absolute; left: 0px; top: 15px;
+    z-index: -1;
+    transition: all .3s ease-out;
 }
-.content_area .con2 p:nth-of-type(1){
-    font-size: 1.56rem;
-    font-weight: 600;
-    text-align: right;
-    margin-top: 50px;
-    margin-bottom: 40px;
+.content_area .con1 ul li:nth-of-type(1):hover dl dd::before{
+    content: ''; display: block;
+    width: 510px; height: 20px;
+    background: #ffcca860;
+    position: absolute; left: -8px; top: 15px;
 }
-.content_area .con2 p:nth-of-type(2){
-    font-size: 1.38rem;
-    text-align: right;
-    line-height: 2.5rem;
-    margin-bottom: 100px;
+.content_area .con1 ul li:nth-of-type(2):hover dl dd::before{
+    content: ''; display: block;
+    width: 490px; height: 20px;
+    background: #ffcca860;
+    position: absolute; left: -8px; top: 15px;
 }
 
-/* 식당 리스트 */
 
-.content_area .jejubg{
-    width: 100%; height: 400px;
-    background: url(../images/content1/bg.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-.content_area .con3{width: 1200px; margin: 150px auto;}
+/* 식당 리스트 con2 */
+
+.content_area .con2{width: 1400px; margin: 150px auto;}
 .content_area .tit_img{border-radius: 20px;}
-
-
-
 
 .content_area .map_con{
     display: flex; 
@@ -208,8 +174,8 @@
     width: 50%;
 }
 .content_area .map_left .branch ul{
-    width: 45%;
-    margin-left: 40px;
+    width: 40%;
+    margin-left: 70px;
 }
 .content_area .map_left .branch ul li:nth-of-type(1) span{
     display: block;
@@ -221,7 +187,7 @@
 }
 .content_area .map_left .branch ul li:nth-of-type(1) strong{
     display: block;
-    font-size: 1.13rem;
+    font-size: 1.25rem;
     margin: 10px 0;
     font-weight: 700;
     
@@ -236,45 +202,78 @@
 
 
 
-
-
-
-
-
+/* 매장 리스트  */
 
 .content_area .restaurant{
     display: flex; 
-    width: 40%; 
+    justify-content: flex-end;
+    width: 45%; 
     margin-top: 30px;
 }
 .content_area .restaurant ul{
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 20px;
 }
 .content_area .restaurant div{
-    width: 250px; 
+    width: 300px; 
     cursor: pointer;
 }
 .content_area .restaurant div ul li{
     width: 100%;
-    /* margin-bottom: 15px; */
 }
 .content_area .restaurant div ul li dl{
     display: flex;
     align-items: center;
 } 
 .content_area .restaurant div ul li dl dt{
-    width: 70px;
+    width: 80px;
     color: #8E684C;
     background: #f5e6da81;;
     border-radius: 20px;
     padding: 2px 0;
-    font-size: .9rem;
+    font-size: 1rem;
     text-align: center;
 }
 .content_area .restaurant div ul li dl dd{
-    font-size: 1.13rem;
+    font-size: 1.2rem;
     margin-left: 20px;
 }
+
+
+
+
+
+/* con3 */
+.content_area .jejubg{
+    width: 100%;
+    background: url(../images/content1/bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+.content_area .con3 {width: 1200px; margin: 0 auto; padding: 100px 0; }
+.content_area .con3 p:nth-of-type(1){
+    font-size: 1.88rem;
+    font-weight: 600;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    position: relative;
+    line-height: 3rem;
+}
+.content_area .con3 p:nth-of-type(2){
+    font-size: 1.56rem;
+    font-weight: 600;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+.content_area .con3 p:nth-of-type(3){
+    font-size: 1.38rem;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    line-height: 2.5rem;
+}
+
 
