기업형 서브페이지 common.css 전체 수정

--- a/sub4/common/css/sub4common.css
+++ b/sub4/common/css/sub4common.css
@@ -18,10 +18,26 @@ position: relative; left: 50%; top: 0; margin-left: -1000px;
 .sub_nav{width: 100%; border-bottom: 1px solid #c1c1c1;}
 .sub_nav ul{overflow: hidden; width: 1200px; margin: 0 auto;}
 .sub_nav li{width: 50%; float: left; text-align: center;}
-.sub_nav li a{font-size: 1.25rem; font-weight: 500; color: #777;
-    padding: 15px; transition: all .5s ease-out ;}
-.sub_nav li a:hover, .sub_nav li .current{background: #8E684C; color: #fff; font-weight: 600;
+.sub_nav li .current{
+    background: #8E684C;
+    color: #fff;
 }
+.sub_nav li a{
+    font-size: 1.25rem; font-weight: 500; 
+    color: #777;
+    padding: 15px; 
+    transition: all .5s ease-out;
+    position: relative;
+}
+.sub_nav li a::after {
+    content: ''; display: block;
+    width: 0; height: 2px;
+    background: #8E684C;
+    position: absolute; left: 50%; bottom: 0;
+    transform: translateX(-50%);
+    transition: all .3s ease;
+}
+.sub_nav li a:hover::after {width: 100%;}
 
 
 /* title_area 영역 */
